src/FinancialForce Accounting/objects/codaScheduleLineItem__c.object
<CustomObject>
    <description>The schedule line items on a sales invoice.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>codaInvoice__c</referenceTo>
        <relationshipLabel>Income Schedule Line Items</relationshipLabel>
        <relationshipName>ScheduleLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Income Schedule Line Items</relationshipLabel>
        <relationshipName>SalesScheduleLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesInvoiceLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice Line Item</label>
        <referenceTo>codaInvoiceLineItem__c</referenceTo>
        <relationshipLabel>Income Schedule Line Items</relationshipLabel>
        <relationshipName>SalesScheduleLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UnitofWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>toPost__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field to differentiate whether the line will create and post its related Journal, or will just create it.</description>
        <label>Post Journal</label>
        <type>Checkbox</type>
    </fields>
    <label>Income Schedule Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Income Schedule Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Schedule Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>